# civilisation_hub

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
core/: equilibrium.py  proportions.py
database/: __init__.py  engine.py  models.py  persistence.py  repository.py  session.py
evolution/: __init__.py  tracker.py  transitions.py
knowledge/domains/: __init__.py  accounting.py  actuarial_science.py  aerospace.py  aesthetics.py  agriculture.py  algebra.py  anatomy.py  anthropology.py  architecture.py  archival_science.py  art.py  artificial_intelligence.py  astronomy.py  astrophysics.py  base.py  bioethics.py  bioinformatics.py  biology.py  biophysics.py  biotechnology.py  botany.py  calculus.py  chemistry.py  classics.py  code.py  cognitive_science.py  communication.py  computation.py  computer_science.py  criminology.py  cultural_studies.py  cybersecurity.py  data_science.py  demography.py  dentistry.py  ecology.py  econometrics.py  economics.py  education.py  (+63 more)
models/: domain.py
output/: __init__.py  display.py  formatters.py  reporters.py
participation/: __init__.py  contributions.py  tracker.py
tests/: test_database.py  test_domain.py  test_equilibrium.py  test_evolution.py  test_knowledge_domains.py  test_main.py  test_output.py  test_participation.py  test_proportions.py  test_registry.py  test_verification.py
verification/: __init__.py  validators.py  verifier.py
