[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civilisation-hub"
version = "1.0.0"
description = "A knowledge management system built on META 50/50 Equilibrium"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["knowledge", "equilibrium", "domains", "balance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
civilisation-hub = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "models*", "knowledge*", "evolution*", "participation*", "verification*", "output*", "database*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "models", "knowledge", "evolution", "participation", "verification", "output", "database"]
omit = ["tests/*", "venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
